# fastapi-strands-opik

./: .gitignore  Dockerfile  compose.yml  docker-compose.yml  main.py  multistage.Dockerfile  pyproject.toml  standalone.Dockerfile  test_notebook.ipynb
.github/workflows/: ci.yaml
frontend/: README.md  index.html  script.js  style.css
src/: streamlit_app.py
src/test_opik/: __init__.py
src/test_opik/agent/: __init__.py  base_agent.py  hooks.py  orchestrator.py  sql_agent.py
src/test_opik/db/: repository.py
